--- a/homepage.css
+++ b/homepage.css
@@ -44,8 +44,8 @@ p {
 }
 
 .column {   
-  width: 50%;
-  align-items:center;
+  	width: 50%;
+  	align-items:center;
 }
 
 /* Add a card effect for articles */
@@ -61,18 +61,16 @@ p {
 .index {
 	text-indent: 20px;
 }
-aside#Table {
-  width: 250px;
-  position: fixed;
-  left: 2%;
-  top: 27.5%;
-  display: block;
-  padding-left:5px;
-  background-color: #f4f9f9;
-  animation-name: table;
-  animation-duration: 1s;
+div#menu {
+	width: 260px;
+  	position: fixed;
+  	left: 2%;
+  	top: 27.5%;
+  	background-color: white;
+  	animation-name: menu;
+  	animation-duration: 1s;
 }
-@keyframes table {
+@keyframes menu {
 	0% {left: -15%;top: 27.5%;}
 	100% {left: 2%;top: 27.5%;}
 }
