--- a/tests.css
+++ b/tests.css
@@ -2,25 +2,40 @@
 body {
 	background-image: url('background.jpg');
 	background-size: cover;
+	margin:0;
+}
+h2 {
+	font-size: 30px;
+	font-family: sans-serif;
+
 }
 .column {
 	float: left;
- 	width: 30%;
+ 	width: 29%;
+ 	height: 350px;
   	padding: 20px;
-  	background-color: grey;
   	border-radius: 25px;
   	margin-top: 20px;
+  	background-color: white;
+  	opacity: 60%;
+  	margin: 10px;
+  	text-align: center;
 }
+.column:hover {
+	opacity: 100%;
+	color: black;
+	transition-duration: 0.7s;
+	width:31%;
 
-/* Clear floats after the columns */
+}
 .row:after {
-  	content: "";
+	clear: both;
+	content: "";
   	display: table;
-  	clear: both;
 }
 .header {
 	background: navy; 
-	padding: 5px;
+	padding: 20px;
 }
 .float {
 	float: left;
@@ -28,7 +43,6 @@ body {
 .navbar {
 	background-color: #0859C6;
   	overflow: hidden;
-  
 }
 .navbar a {
   	display: block;
@@ -38,13 +52,13 @@ body {
   	padding: 20px;
   	text-decoration: none;
   	font-size: 20px
-
 }
 
 .navbar a:hover {
   	background-color: #FCC201;
   	color: black;
   	border-radius: 5px;
+  	transition-duration: 0.4s;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
