--- a/signin.css
+++ b/signin.css
@@ -27,8 +27,11 @@ p {
     margin-right: auto;
 }
 .header {
+	margin-top: 0;
 	background: navy; 
-	padding: 5px;
+	padding: 20px;
+	text-align: center;
+	color: white;
 }
 .landing {
 	padding: 30px;
@@ -72,4 +75,26 @@ p {
     padding-left: 8px; 
     font-size:15px;
     background-color: #dbdbdb;
+}
+
+.navbar {
+	background-color: #0859C6;
+  	overflow: hidden;
+}
+
+.navbar a {
+  	display: block;
+  	float: left;
+  	color: #f2f2f2;
+  	text-align: center;
+  	padding: 20px;
+  	text-decoration: none;
+  	font-size: 20px
+}
+
+.navbar a:hover {
+  	background-color: #FCC201;
+  	color: black;
+  	border-radius: 5px;
+  	transition-duration: 0.4s;
 }
