--- a/testsAndBoard.css
+++ b/testsAndBoard.css
@@ -6,7 +6,11 @@ body {
 h2 {
 	font-size: 30px;
 	font-family: sans-serif;
-
+	text-align: center;
+}
+p {
+	font-family: sans-serif;
+	text-align: center;
 }
 .column {
 	float: left;
